fix: remove extra margin-bottom in file input

--- a/src/components/file-input/styles.scss
+++ b/src/components/file-input/styles.scss
@@ -5,7 +5,6 @@ $FileNameSpanBackgroundColor: #ecedef;
 
 .file-container {
   direction: rtl;
-  margin-bottom: 16px;
 
   *:not(.material-icons) {
     font-family: "IranSans";
